--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy": "wrangler deploy"
   },
   "dependencies": {
+    "ejs": "^3.1.10",
     "hono": "^3.0.0"
   },
   "devDependencies": {
